--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/$IMAGE_NAME"
 
       - name: Run image
-        run: docker run -it -d --name nvchecker -v $GITHUB_WORKSPACE:/workspace -w /workspace --env NVCHECKER_GITHUB_TOKEN=${{ secrets.NVCHECKER_GITHUB_TOKEN }} docker.pkg.github.com/$GITHUB_REPOSITORY/$IMAGE_NAME:latest
+        run: docker run -it -d --name nvchecker -v $GITHUB_WORKSPACE:/workspace -w /workspace --env NVCHECKER_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} docker.pkg.github.com/$GITHUB_REPOSITORY/$IMAGE_NAME:latest
 
       - name: Check version
         run: |
