feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -53,3 +53,12 @@ regex = "version": "([\d.]+)",
 [Visual-Studio-Code]
 github = microsoft/vscode
 use_max_tag = true
+
+[Surge-Mac-Stable]
+cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed.xml | xq '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
+
+[Surge-Mac-Beta]
+cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed-beta.xml | xq '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
+
+[Fork]
+cmd = curl -s https://git-fork.com/update/feed.xml | xq '.rss.channel.item[0].enclosure | ."@sparkle:version"'
