feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -35,7 +35,7 @@ use_max_tag = true
 ; gitlabhq/gitlabhq
 ; url = https://about.gitlab.com/security-releases.xml
 ; url = https://about.gitlab.com/releases.xml
-cmd = curl -s https://about.gitlab.com/atom.xml | xq '.feed.entry | map(select(.title|test("release:";"i")))[0] | .title'
+cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry | map(select(.title|test("release:";"i")))[0] | .title'
 
 [Google-Chrome-Stable]
 ; https://chromiumdash.appspot.com/releases?platform=Mac
@@ -55,10 +55,10 @@ github = microsoft/vscode
 use_max_tag = true
 
 [Surge-Mac-Stable]
-cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed.xml | xq '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
+cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed.xml | xq --raw-output '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
 
 [Surge-Mac-Beta]
-cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed-beta.xml | xq '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
+cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed-beta.xml | xq --raw-output '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
 
 [Fork]
-cmd = curl -s https://git-fork.com/update/feed.xml | xq '.rss.channel.item[0].enclosure | ."@sparkle:version"'
+cmd = curl -s https://git-fork.com/update/feed.xml | xq --raw-output '.rss.channel.item[0].enclosure | ."@sparkle:version"'
