feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -62,3 +62,32 @@ cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed-beta.xml | xq --raw-
 
 [Fork]
 cmd = curl -s https://git-fork.com/update/feed.xml | xq --raw-output '.rss.channel.item[0].enclosure | ."@sparkle:version"'
+
+[Beancount]
+pypi = beancount
+
+[Jira]
+# https://github.com/stedolan/jq/wiki/FAQ#general-questions
+cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | .[0].version'
+
+[Confluence]
+cmd = curl -s https://my.atlassian.com/download/feeds/current/confluence.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | .[0].version'
+
+[UniFi-Network-Controller]
+cmd = curl -s 'https://www.ui.com/download/?software=2451&eula=true' -H 'authority: www.ui.com' -H 'pragma: no-cache' -H 'cache-control: no-cache' -H 'x-requested-with: XMLHttpRequest' --compressed | jq --raw-output '.download_url | match("[\\d.]+").string'
+
+[docker-openldap]
+github = osixia/docker-openldap
+use_latest_release = true
+
+[docker-openldap-backup]
+github = osixia/docker-openldap-backup
+use_latest_release = true
+
+[docker-phpLDAPadmin]
+github = osixia/docker-phpLDAPadmin
+use_latest_release = true
+
+[webhook]
+github = adnanh/webhook
+use_latest_release = true
