feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -74,6 +74,10 @@ use_latest_release = true
 github = surge-networks/snell
 use_latest_release = true
 
+[docker-compose]
+github = docker/compose
+use_latest_release = true
+
 
 ; macOS Apps
 [Google-Chrome-Stable]
