feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -268,7 +268,8 @@ use_latest_release = true
 
 [Microsoft-Office]
 ; https://docs.microsoft.com/en-us/officeupdates/update-history-office-for-mac
-cmd = curl -s https://macadmins.software/latest.xml | xq --raw-output '.latest.package | map(select(.title|test("Office 365/2019 Suite Installer";"i")))[0] | .version'
+; cmd = curl -s https://macadmins.software/latest.xml | xq --raw-output '.latest.package | map(select(.title|test("Office 365/2019 Suite Installer";"i")))[0] | .version'
+cmd = curl -ILs -o /dev/null -w %{url_effective} 'https://go.microsoft.com/fwlink/?linkid=525133' | grep -oP '.*\K(?<=Microsoft_Office_)[\d.]+(?=_Installer\.pkg)'
 
 [1Password-for-Mac]
 ; https://app-updates.agilebits.com/product_history/OPM7
