feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -39,7 +39,7 @@ use_max_tag = true
 ; gitlabhq/gitlabhq
 ; url = https://about.gitlab.com/security-releases.xml
 ; url = https://about.gitlab.com/releases.xml
-cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry | map(select(.title|test("release:";"i")))[0] | .title'
+cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry | map(select(.title|test("release:"; "i")))[0] | .title'
 
 [Beancount]
 pypi = beancount
@@ -235,7 +235,7 @@ cmd = curl -ILs -o /dev/null -w %{url_effective} 'https://download.panic.com/tra
 cmd = curl -s https://www.obdev.at/products/littlesnitch/releasenotes.html | pup 'h3#first-releasenotes-headline, h3#first-releasenotes-headline span.buildnumber json{}' | jq --raw-output '[.[0].text, .[1].text] | map(match("[\\d.]+").string) | join("-")'
 
 [Burp-Suite]
-cmd = curl -s https://portswigger.net/burp/releases/rss | xq --raw-output '.rss.channel.item | map(select(.title|test("Professional";"i")))[0] | .title'
+cmd = curl -s https://portswigger.net/burp/releases/rss | xq --raw-output '.rss.channel.item | map(select(.title|test("Professional"; "i")))[0] | .title'
 
 [aText]
 sparkle = https://www.trankynam.com/atext/aText-Appcast.xml
@@ -268,7 +268,7 @@ use_latest_release = true
 
 [Microsoft-Office]
 ; https://docs.microsoft.com/en-us/officeupdates/update-history-office-for-mac
-; cmd = curl -s https://macadmins.software/latest.xml | xq --raw-output '.latest.package | map(select(.title|test("Office 365/2019 Suite Installer";"i")))[0] | .version'
+; cmd = curl -s https://macadmins.software/latest.xml | xq --raw-output '.latest.package | map(select(.title|test("Office 365/2019 Suite Installer"; "i")))[0] | .version'
 cmd = curl -ILs -o /dev/null -w %{url_effective} 'https://go.microsoft.com/fwlink/?linkid=525133' | grep -oP '.*\K(?<=Microsoft_Office_)[\d.]+(?=_Installer\.pkg)'
 
 [1Password-for-Mac]
@@ -287,3 +287,44 @@ cmd = curl -s https://www.arqbackup.com/download/arqbackup/arq6_release_notes.ht
 
 [DaisyDisk]
 cmd = curl -s 'https://daisydiskapp.com/downloads/appcastReleaseNotes.php?appEdition=Standard&osVersion=10.15' | pup 'div:nth-child(1) > h1' | grep -oP '.*\K(?<= )[\d.]+(?=)'
+
+
+; Apple
+; OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq -n 'env.REGEX'
+[macOS]
+; cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | xq --raw-output '.rss.channel.item | map(select(.title|test("^macOS (?:(?!beta).)*$"; "i")))[0] | .title'
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[macOS-Beta]
+; cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | xq --raw-output '.rss.channel.item | map(select(.title|test("macOS .+ beta "; "i")))[0] | .title'
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="macOS" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[iOS]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="iOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[iOS-Beta]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="iOS" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[iPadOS]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="iPadOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[iPadOS-Beta]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="iPadOS" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[watchOS]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="watchOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[watchOS-Beta]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="watchOS" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[tvOS]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="tvOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[tvOS-Beta]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="tvOS" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[Xcode]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="Xcode" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+[Xcode-Beta]
+cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="Xcode" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
