feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -66,6 +66,10 @@ use_latest_release = true
 github = osixia/docker-phpLDAPadmin
 use_latest_release = true
 
+[docker-phpLDAPadmin]
+github = tiredofit/docker-self-service-password
+use_latest_release = true
+
 [webhook]
 github = adnanh/webhook
 use_latest_release = true
@@ -291,6 +295,9 @@ cmd = curl -s 'https://daisydiskapp.com/downloads/appcastReleaseNotes.php?appEdi
 
 ; Apple
 ; OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq -n 'env.REGEX'
+; https://ipsw.me/timeline.rss
+; https://ipswdownloads.docs.apiary.io
+; https://api.ineal.me/tss/docs
 [macOS]
 ; cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | xq --raw-output '.rss.channel.item | map(select(.title|test("^macOS (?:(?!beta).)*$"; "i")))[0] | .title'
 cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
