--- a/source.ini
+++ b/source.ini
@@ -66,7 +66,7 @@ use_latest_release = true
 github = osixia/docker-phpLDAPadmin
 use_latest_release = true
 
-[docker-phpLDAPadmin]
+[docker-self-service-password]
 github = tiredofit/docker-self-service-password
 use_latest_release = true
 
