feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -82,6 +82,17 @@ use_latest_release = true
 github = docker/compose
 use_latest_release = true
 
+[trojan-go]
+github = p4gefau1t/trojan-go
+use_latest_release = true
+
+[trojan-gfw]
+github = trojan-gfw/trojan
+use_latest_release = true
+
+[Netch]
+github = NetchX/Netch
+use_latest_release = true
 
 ; macOS Apps
 [Google-Chrome-Stable]
