feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -94,6 +94,14 @@ use_latest_release = true
 github = NetchX/Netch
 use_latest_release = true
 
+[docker-jumpserver]
+github = jumpserver/Dockerfile
+use_latest_release = true
+
+[jumpserver]
+github = jumpserver/jumpserver
+use_latest_release = true
+
 ; macOS Apps
 [Google-Chrome-Stable]
 ; https://chromiumdash.appspot.com/releases?platform=Mac
