feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -7,21 +7,9 @@ newver = new_ver.txt
 github = lilydjwg/nvchecker
 use_max_tag = true
 
-[Django]
-pypi = Django
-
-[tornado]
-pypi = tornado
-
 [Metabase]
 github = metabase/metabase
 use_latest_release = true
-
-[BorgBackup]
-pypi = borgbackup
-
-[Sentry]
-pypi = sentry
 
 [AriaNg]
 github = mayswind/AriaNg
@@ -31,18 +19,15 @@ use_latest_release = true
 github = mayswind/AriaNg-Native
 use_latest_release = true
 
-[GitLab]
-gitlab = gitlab-org/gitlab
-use_max_tag = true
+; [GitLab]
+; gitlab = gitlab-org/gitlab
+; use_max_tag = true
 
 [GitLab-Release]
 ; gitlabhq/gitlabhq
 ; url = https://about.gitlab.com/security-releases.xml
 ; url = https://about.gitlab.com/releases.xml
 cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry | map(select(.title|test("release:"; "i")))[0] | .title'
-
-[Beancount]
-pypi = beancount
 
 [Jira]
 # https://github.com/stedolan/jq/wiki/FAQ#general-questions
@@ -354,3 +339,26 @@ cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NA
 
 [Xcode-Beta]
 cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="Xcode" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
+
+
+; Python packages
+[Django]
+pypi = Django
+
+[tornado]
+pypi = tornado
+
+[BorgBackup]
+pypi = borgbackup
+
+[Sentry]
+pypi = sentry
+
+[Beancount]
+pypi = beancount
+
+[Celery]
+pypi = celery
+
+[kombu]
+pypi = kombu
