feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -69,7 +69,7 @@ use_latest_release = true
 
 [trojan-go]
 github = p4gefau1t/trojan-go
-use_latest_release = true
+use_max_tag = true
 
 [trojan-gfw]
 github = trojan-gfw/trojan
@@ -81,7 +81,7 @@ use_latest_release = true
 
 [docker-jumpserver]
 github = jumpserver/Dockerfile
-use_latest_release = true
+use_max_tag = true
 
 [jumpserver]
 github = jumpserver/jumpserver
