feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -29,6 +29,10 @@ use_latest_release = true
 ; url = https://about.gitlab.com/releases.xml
 cmd = curl -s https://about.gitlab.com/atom.xml | xq --raw-output '.feed.entry | map(select(.title|test("release:"; "i")))[0] | .title'
 
+[GitLab-Runner-Helm-Chart]
+gitlab = gitlab-org/charts/gitlab-runner
+use_max_tag = true
+
 [Jira]
 # https://github.com/stedolan/jq/wiki/FAQ#general-questions
 cmd = curl -s https://my.atlassian.com/download/feeds/current/jira-software.json | jq --raw-input --raw-output 'explode | .[1+index("("|explode): rindex(")"|explode)] | implode | fromjson | .[0].version'
@@ -85,6 +89,22 @@ use_max_tag = true
 
 [jumpserver]
 github = jumpserver/jumpserver
+use_latest_release = true
+
+[alfred-vscode]
+github = kbshl/alfred-vscode
+use_latest_release = true
+
+[mas]
+github = mas-cli/mas
+use_latest_release = true
+
+[Sequel-Ace]
+github = Sequel-Ace/Sequel-Ace
+use_latest_release = true
+
+[docker-nexus3]
+github = sonatype/docker-nexus3
 use_latest_release = true
 
 ; macOS Apps
