feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -107,6 +107,7 @@ use_latest_release = true
 github = sonatype/docker-nexus3
 use_latest_release = true
 
+; --------------------------------------------------
 ; macOS Apps
 [Google-Chrome-Stable]
 ; https://chromiumdash.appspot.com/releases?platform=Mac
@@ -316,7 +317,7 @@ cmd = curl -s https://www.arqbackup.com/download/arqbackup/arq6_release_notes.ht
 [DaisyDisk]
 cmd = curl -s 'https://daisydiskapp.com/downloads/appcastReleaseNotes.php?appEdition=Standard&osVersion=10.15' | pup 'div:nth-child(1) > h1' | grep -oP '.*\K(?<= )[\d.]+(?=)'
 
-
+; --------------------------------------------------
 ; Apple
 ; OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq -n 'env.REGEX'
 ; https://ipsw.me/timeline.rss
@@ -360,7 +361,7 @@ cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NA
 [Xcode-Beta]
 cmd = curl -s https://developer.apple.com/news/releases/rss/releases.rss | OS_NAME="Xcode" REGEX="$OS_NAME .+ beta " xq --raw-output '.rss.channel.item | map(select(.title|test(env.REGEX; "i")))[0] | .title | ltrimstr(env.OS_NAME + " ")'
 
-
+; --------------------------------------------------
 ; Python packages
 [Django]
 pypi = Django
@@ -382,3 +383,30 @@ pypi = celery
 
 [kombu]
 pypi = kombu
+
+; --------------------------------------------------
+; npm packages
+[uview-ui]
+; https://www.uviewui.com
+npm = uview-ui
+
+[React]
+npm = react
+
+[Vuex]
+npm = vuex
+
+[Vue.js]
+npm = vue
+
+[@dcloudio/uni-mp-weixin]
+npm = @dcloudio/uni-mp-weixin
+
+[@dcloudio/uni-h5]
+npm = @dcloudio/uni-h5
+
+[@dcloudio/uni-h5-ui]
+npm = @dcloudio/uni-h5-ui
+
+[@vue/cli]
+npm = @vue/cli
