feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -107,6 +107,11 @@ use_latest_release = true
 github = sonatype/docker-nexus3
 use_latest_release = true
 
+[grafana]
+github = grafana/grafana
+use_latest_release = true
+
+
 ; --------------------------------------------------
 ; macOS Apps
 [Google-Chrome-Stable]
