feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -389,6 +389,9 @@ pypi = celery
 [kombu]
 pypi = kombu
 
+[ansible]
+pypi = ansible
+
 ; --------------------------------------------------
 ; npm packages
 [uview-ui]
