feat: Update source.ini

--- a/source.ini
+++ b/source.ini
@@ -133,12 +133,18 @@ regex = "version": "([\d.]+)",
 ; use_max_tag = true
 cmd = curl -s https://update.code.visualstudio.com/api/update/darwin/stable/VERSION | jq --raw-output .productVersion
 
-[Surge-Mac-Stable]
+[Surge-Mac-v3-Stable]
 ; cmd = curl -s https://www.nssurge.com/mac/v3/appcast-signed.xml | xq --raw-output '.rss.channel.item[0].enclosure | [."@sparkle:shortVersionString", ."@sparkle:version"] | join("-")'
 sparkle = https://www.nssurge.com/mac/v3/appcast-signed.xml
 
-[Surge-Mac-Beta]
+[Surge-Mac-v3-Beta]
 sparkle = https://www.nssurge.com/mac/v3/appcast-signed-beta.xml
+
+[Surge-Mac-v4-Stable]
+sparkle = https://www.nssurge.com/mac/v4/appcast-signed.xml
+
+[Surge-Mac-v4-Beta]
+sparkle = https://www.nssurge.com/mac/v4/appcast-signed-beta.xml
 
 [Fork]
 ; cmd = curl -s https://git-fork.com/update/feed.xml | xq --raw-output '.rss.channel.item[0].enclosure | ."@sparkle:version"'
