--- a/source.ini
+++ b/source.ini
@@ -328,6 +328,10 @@ cmd = curl -s https://www.arqbackup.com/download/arqbackup/arq6_release_notes.ht
 [DaisyDisk]
 cmd = curl -s 'https://daisydiskapp.com/downloads/appcastReleaseNotes.php?appEdition=Standard&osVersion=10.15' | pup 'div:nth-child(1) > h1' | grep -oP '.*\K(?<= )[\d.]+(?=)'
 
+[Obsidian]
+github = obsidianmd/obsidian-releases
+use_latest_release = true
+
 ; --------------------------------------------------
 ; Apple
 ; OS_NAME="macOS" REGEX=`printf '^%s (?:(?!beta).)*$' $OS_NAME` xq -n 'env.REGEX'
